Calculadora do Windows 7 com interface Swing

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ nbdist/
 .nb-gradle/
 
 # End of https://www.gitignore.io/api/netbeans,java
+/IntroInterfaces/nbproject/private/
+/CalcWin7/nbproject/private/
