lembretes: exercício de threads

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ nbdist/
 # End of https://www.gitignore.io/api/netbeans,java
 /IntroInterfaces/nbproject/private/
 /CalcWin7/nbproject/private/
+/Lembretes/nbproject/private/
