[wip] exercício de interação com banco de dados

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ nbdist/
 /IntroInterfaces/nbproject/private/
 /CalcWin7/nbproject/private/
 /Lembretes/nbproject/private/
+/Acervo/nbproject/private/
